find_package(PythonInterp REQUIRED)

set(SYSCALL_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/syscall.tbl)

add_custom_command(OUTPUT ${SYSCALL_ENUM} ${SYSCALL_REGISTER} ${SYSCALL_GLIBC_DEFINES}
  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen.py enum < ${SYSCALL_SOURCE} > ${SYSCALL_ENUM}
  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen.py register < ${SYSCALL_SOURCE} > ${SYSCALL_REGISTER}
  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen.py glibc_defines < ${SYSCALL_SOURCE} > ${SYSCALL_GLIBC_DEFINES}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gen.py ${CMAKE_CURRENT_SOURCE_DIR}/syscall.tbl
  )

add_custom_target(SyscallGen DEPENDS ${SYSCALL_ENUM} ${SYSCALL_REGISTER} ${SYSCALL_GLIBC_DEFINES})
